--- a/TaskManager/bin/view/TaskView.fxml
+++ b/TaskManager/bin/view/TaskView.fxml
@@ -6,17 +6,17 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
+<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" styleClass="background" stylesheets="@../../bin/view/DarkTheme.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
       <Label fx:id="firstNameLabel" layoutX="502.0" layoutY="25.0" prefHeight="17.0" prefWidth="193.0" text="Nombre" AnchorPane.rightAnchor="105.0" />
       <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="347.0" prefWidth="193.0" AnchorPane.bottomAnchor="22.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="42.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" AnchorPane.rightAnchor="56.0" />
-            <Button layoutX="50.0" layoutY="250.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" AnchorPane.bottomAnchor="72.0" AnchorPane.rightAnchor="64.0" />
-            <Button layoutX="37.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" AnchorPane.rightAnchor="51.0" />
+            <Button layoutX="14.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleNewProject" text="Crear Proyecto" AnchorPane.rightAnchor="35.0" />
+            <Button layoutX="24.0" layoutY="237.0" mnemonicParsing="false" onAction="#handleTaskView" text="Vista Tareas" AnchorPane.bottomAnchor="77.0" AnchorPane.rightAnchor="44.0" />
+            <Button layoutX="8.0" layoutY="118.0" mnemonicParsing="false" onAction="#handleTasksInProject" text="Tareas asociadas" AnchorPane.rightAnchor="28.0" />
             <Button layoutX="33.0" layoutY="168.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="25.0" prefWidth="114.0" text="Eliminar Proyecto" AnchorPane.rightAnchor="46.0" />
             <Button layoutX="41.0" layoutY="78.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="25.0" prefWidth="97.0" text="Editar Proyecto" AnchorPane.rightAnchor="55.0" />
-            <Button layoutX="50.0" layoutY="300.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="25.0" prefWidth="79.0" text="Dashboard" AnchorPane.bottomAnchor="22.0" AnchorPane.rightAnchor="64.0" />
+            <Button layoutX="24.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="33.0" prefWidth="125.0" text="Dashboard" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="44.0" />
          </children>
       </AnchorPane>
       <Label fx:id="priorityLabel" layoutX="619.0" layoutY="152.0" prefHeight="17.0" prefWidth="54.0" text="Prioridad" AnchorPane.rightAnchor="127.0" />
