--- a/TaskManager/bin/view/NewContext.fxml
+++ b/TaskManager/bin/view/NewContext.fxml
@@ -11,7 +11,22 @@
       <TextField fx:id="firstNameField" layoutX="87.0" layoutY="48.0" style="-fx-background-color: black;" styleClass="label-bright" />
       <Label layoutX="25.0" layoutY="56.0" styleClass="label-bright" text="Nombre" />
       <Label layoutX="22.0" layoutY="104.0" styleClass="label-bright" text="Prioridad" />
-      <TextField fx:id="priorityField" layoutX="87.0" layoutY="107.0" style="-fx-background-color: black;" styleClass="label-bright" />
       <Button layoutX="190.0" layoutY="162.0" mnemonicParsing="false" onAction="#handleCancel" style="-fx-background-color: black; -fx-border-color: black;" styleClass="label-bright" text="Cancelar" />
+      <GridPane layoutX="90.0" layoutY="85.0" prefHeight="56.0" prefWidth="200.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="10.0" prefWidth="200.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="101.0" minWidth="0.0" prefWidth="0.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="28.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="54.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="54.0" minHeight="0.0" prefHeight="26.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="78.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Slider fx:id="slider" onMouseClicked="#handlePrioridad" onMouseDragged="#handlePrioridad" prefHeight="14.0" prefWidth="93.0" GridPane.rowIndex="3" />
+            <Label fx:id="priorityField" alignment="CENTER" prefHeight="53.0" prefWidth="196.0" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
