--- a/TaskManager/src/view/EditContext.fxml
+++ b/TaskManager/src/view/EditContext.fxml
@@ -17,10 +17,20 @@
             <String fx:value="label-header" />
             <String fx:value="background" />
          </styleClass></TextField>
-      <TextField fx:id="priorityField" layoutX="108.0" layoutY="114.0" prefHeight="25.0" prefWidth="168.0" style="-fx-background-color: black;">
-         <styleClass>
-            <String fx:value="background" />
-            <String fx:value="label-bright" />
-         </styleClass></TextField>
+      <GridPane layoutX="101.0" layoutY="109.0" prefHeight="59.0" prefWidth="200.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="194.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="4.0" prefWidth="6.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="15.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Slider fx:id="slider" onMouseClicked="#handlePrioridad" onMouseDragged="#handlePrioridad" GridPane.rowIndex="2" />
+            <Label fx:id="priorityField" alignment="CENTER" prefHeight="21.0" prefWidth="207.0" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
